--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mintsysadm (1.0.3) zena; urgency=medium
+
+  * about: Fix version not showing
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sun, 28 Dec 2025 14:47:09 +0000
+
 mintsysadm (1.0.2) zena; urgency=medium
 
   * l10n: Update translations
