--- a/po/mintsysadm-br.po
+++ b/po/mintsysadm-br.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: linuxmint\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2025-11-24 13:08+0000\n"
-"PO-Revision-Date: 2025-11-13 09:33+0000\n"
+"PO-Revision-Date: 2025-12-30 12:59+0000\n"
 "Last-Translator: Anthony Guechoum <a.guechoum@proton.me>\n"
 "Language-Team: Breton <br@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2025-12-12 13:33+0000\n"
-"X-Generator: Launchpad (build 379e22b8475e3402088a4cdb4a6e7936a4d28414)\n"
+"X-Launchpad-Export-Date: 2026-01-08 15:45+0000\n"
+"X-Generator: Launchpad (build 99c00f518760bdd50fc6e353e7736d2fff8fba4a)\n"
 
 #: generate_desktop_files:25 generate_desktop_files:53
 #: usr/lib/linuxmint/mintsysadm/mintsysadm.py:52
@@ -35,6 +35,8 @@ msgstr "Ouzhpennañ un arguzenn luskañ"
 #: usr/lib/linuxmint/mintsysadm/mintsysadm.py:70
 msgid "If the argument is not recognized by the kernel it will be ignored."
 msgstr ""
+"Laosket e vo an arguzenn a-gostez ma n'eo ket ar graoñell evit anavezout "
+"anezhi."
 
 #: usr/lib/linuxmint/mintsysadm/mintsysadm.py:88
 msgid "Quit"
@@ -68,11 +70,11 @@ msgstr "Fazi"
 
 #: usr/lib/linuxmint/mintsysadm/mintsysadm.py:205
 msgid "Boot arguments cannot include space characters."
-msgstr ""
+msgstr "Arguzennoù luskañ n'hall ket bezañ esaouennoù ebarzho."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:1
 msgid "Boot menu"
-msgstr ""
+msgstr "Lañser luskañ"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:2
 msgid "Show the menu"
@@ -82,26 +84,27 @@ msgstr "Diskouez al lañser"
 msgid ""
 "The menu will always be shown if multiple operating systems are installed."
 msgstr ""
+"Diskouezet e vo al lañser atav ma vez staliet meur a reizhiad korvoiñ."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:4
 msgid "Delay before booting the default selection (seconds)"
-msgstr ""
+msgstr "Dale a-raok luskañ an diuzad dre ziouer (eilennoù)"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:5
 msgid "Set the delay to -1 if you want the menu to show indefinitely."
-msgstr ""
+msgstr "Lakait an dale da -1 ma fell deoc'h e chomfe diskouezet al lañser."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:6
 msgid "-1"
-msgstr ""
+msgstr "-1"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:7
 msgid "Remember the last selected choice as the default"
-msgstr ""
+msgstr "Derc'hel soñj eus an diuzad diwezhañ evel an hini dre ziouer"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:8
 msgid "Boot parameters"
-msgstr ""
+msgstr "Arventennoù luskañ"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:9
 msgid "The computer booted with the following parameters:"
@@ -116,6 +119,8 @@ msgstr ""
 #: usr/share/mintsysadm/mintsysadm.ui.h:11
 msgid "Press Save and reboot the computer for changes to take effect."
 msgstr ""
+"Klikit war Enrollañ hag adloc'hit an urzhiataer evit ma vo arloet ar "
+"c'hemmoù."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:12
 msgid "Save"
