--- a/po/mintsysadm-nb.po
+++ b/po/mintsysadm-nb.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: linuxmint\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2025-11-24 13:08+0000\n"
-"PO-Revision-Date: 2025-11-13 17:17+0000\n"
+"PO-Revision-Date: 2025-12-22 21:01+0000\n"
 "Last-Translator: Simen Ryland Førde <Unknown>\n"
 "Language-Team: Norwegian Bokmal <nb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2025-12-12 13:33+0000\n"
-"X-Generator: Launchpad (build 379e22b8475e3402088a4cdb4a6e7936a4d28414)\n"
+"X-Launchpad-Export-Date: 2026-01-08 15:45+0000\n"
+"X-Generator: Launchpad (build 99c00f518760bdd50fc6e353e7736d2fff8fba4a)\n"
 
 #: generate_desktop_files:25 generate_desktop_files:53
 #: usr/lib/linuxmint/mintsysadm/mintsysadm.py:52
@@ -72,7 +72,7 @@ msgstr "Oppstartsargument kan ikke inneholde mellomrom."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:1
 msgid "Boot menu"
-msgstr ""
+msgstr "Oppstartmeny"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:2
 msgid "Show the menu"
@@ -81,27 +81,28 @@ msgstr "Vis menyen"
 #: usr/share/mintsysadm/mintsysadm.ui.h:3
 msgid ""
 "The menu will always be shown if multiple operating systems are installed."
-msgstr ""
+msgstr "Menyen vil alltid vises dersom flere operativsystem er installert."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:4
 msgid "Delay before booting the default selection (seconds)"
-msgstr ""
+msgstr "Forsinkelse før oppstart av standardvalg (sekund)"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:5
 msgid "Set the delay to -1 if you want the menu to show indefinitely."
 msgstr ""
+"Set forsinkelse til -1 om du vil at menyen skal vises uten tidsavgrensing."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:6
 msgid "-1"
-msgstr ""
+msgstr "-1"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:7
 msgid "Remember the last selected choice as the default"
-msgstr ""
+msgstr "Husk det sist valgte alternativet som standard"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:8
 msgid "Boot parameters"
-msgstr ""
+msgstr "Oppstartparameter"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:9
 msgid "The computer booted with the following parameters:"
@@ -112,10 +113,12 @@ msgid ""
 "In addition to the system configuration you can set your own parameters in "
 "the list below"
 msgstr ""
+"I tillegg til systemoppsettet kan du sette egne parameter i listen nedenfor"
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:11
 msgid "Press Save and reboot the computer for changes to take effect."
 msgstr ""
+"Trykk Lagre og start datamaskinen på nytt for at endringene skal tre i kraft."
 
 #: usr/share/mintsysadm/mintsysadm.ui.h:12
 msgid "Save"
